--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1372,107 +1372,107 @@ stories:
   domain: http://www.sunjournal.com/
   link: https://www.sunjournal.com/2019/12/25/metal-trades-students-in-mexico-taking-skills-outside-the-shop/
 images:
-- name: aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
-- name: machine-road-machine-road-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-electricity.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-- name: blossombar-dark-rain-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-00-00.jpg
-- name: dc-statue-dcstatue-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
-- name: lincoln-memorial-lincolnmemorial-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-mucha-mult.jpg
-- name: razorwire-DSC-0080-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-rainbow-festival.jpg
-- name: braceros-domingo-ulloa-surveillance-over-the-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-surveillance-over-the-city.jpg
-- name: stories-new-dragon-shadows-black-white-outline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-dragon-shadows-black-white-outline.jpg
-- name: nazi-invasion-san-francisco-salesforce-bay-bridge.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-salesforce-bay-bridge.jpg
-- name: old-cabin-oldcabin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-pond.jpg
-- name: nyc-flag-api-conversations-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alberto-giacometti.jpg
-- name: windowmountain-window-mountain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-oily-mcoilface.jpg
-- name: walled-garden-walled-garden-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-marcel-duchamp.jpg
-- name: copper-circuit-IMG_7169.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7169.jpg
-- name: bf-skinner-firetruck-bright-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-firetruck-bright-sun.jpg
-- name: art-museum-art-museum-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-hot-spicy.jpg
+- name: copper-circuit-nyc-streets-laundromat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-nyc-streets-laundromat.jpg
+- name: stalin-time-girl-reading-bench-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-girl-reading-bench-garden.jpg
+- name: gears-4882162452-fa3126b38d-b-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-constitution.jpg
+- name: mosaic-face-mosaic-face-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dark-rain.jpg
 - name: blossombar-blue-granite-file-00-00-24-99.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-24-99.jpg
-- name: school-clouds-church-clouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
-- name: lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
-- name: nazi-invasion-people-walking-down-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-people-walking-down-street.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-diego-rivera1.jpg
-- name: nazi-invasion-fire-truck-pulling-out-of-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-fire-truck-pulling-out-of-station.jpg
-- name: cannon-facing-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon.jpg
-- name: death-valley-death-valley-national-park-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dry-skin.jpg
-- name: oldhouse-oldhouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
-- name: server-cloud-server-racks-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-dream.jpg
-- name: copper-circuit-pink-elephant-car-wash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-pink-elephant-car-wash.jpg
-- name: stories-new-109-204-800-500-0-max-0-1--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-109-204-800-500-0-max-0-1--5.jpg
-- name: aws-s3-stories-new-109-204-800-500-0-max-0-1--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-109-204-800-500-0-max-0-1--5.jpg
-- name: docks-docks-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-crunch-paper.jpg
-- name: nyc-flag-nycflag-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-collage.jpg
-- name: razorcliff-razorcliff-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-two.jpg
-- name: catacombs-catacombs-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purp-paper.jpg
-- name: old-door-lock-old-door-lock-2-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-post-modern.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
-- name: amusement-park-amusement-park-2-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-granite.jpg
-- name: dragon-desert-desert-dragon-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-pablo-blue.jpg
-- name: oldroad-old-road-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-kandinsky-bv.jpg
-- name: rockingchair-face-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colored-circuits.jpg
-- name: paris-paris-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-graham-sutherland.jpg
-- name: ellis-island-ellisisland-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-cinnamon-rolls.jpg
-- name: abandonedbuildings_wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_wols.jpg
-- name: stories-downtown-fredericksburg-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-feed-people.JPG
-- name: art-museum-art-museum-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-spagetti-accident.jpg
-- name: white-house-whitehouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-two.jpg
-- name: locked-up-steam-lock-up-steam-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-granite.jpg
-- name: oldhousecars-house-old-cars-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gan-vogh.jpg
-- name: old-door-lock-old-door-lock-2-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crunch-paper.jpg
-- name: old-granary-field-granaryfield-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smoking-cigarette.jpg
-- name: nazi-invasion-rocking-chair-on-porch_36332220150_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-rocking-chair-on-porch_36332220150_o.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-blocks.jpg
+- name: copper-circuit-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-google-front-of-business.jpg
+- name: aws-s3-desertrun-desertrun-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-1200.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
+- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+- name: server-cloud-server-racks-door-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-attack-planes.jpg
+- name: ""
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/
+- name: border-crossing-bordercrossing-blue-electricity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-electricity.png
+- name: ellis-island-ellisisland-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-light-dali.jpg
+- name: bf-skinner-girl-reading-garden-flowers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-girl-reading-garden-flowers.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purple-storm.jpg
+- name: curtain-curtain-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-bright-sand.jpg
+- name: old-house-oldhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sunday.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+- name: old-church-oldchurch-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-brush.jpg
+- name: nazi-invasion-seattle-shipping-people-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-shipping-people-walking.jpg
+- name: flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
+- name: downtown-los-angeles-downtown-la-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-marcel-duchamp.JPG
+- name: adam-smith-adam-smith-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sand-paper.jpg
+- name: power-lines-power-lines-empty-space-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-china-prop.jpg
+- name: beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+- name: mosaic-face-mosaic-face-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-sunday.jpg
+- name: oldsmallboat-oldsmallboat-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-aqua.jpg
+- name: castle-wall-DSC-0067-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-soul.JPG
+- name: ellis-island-ellisisland-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-paper.jpg
+- name: oldhouse-granaryfield-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crabapple.jpg
+- name: stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-dali-three.jpg
+- name: beach-rocks-beach-rocks-currents-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sand-paper.jpg
+- name: mediterranean-mediterranean-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-satan-red.jpg
+- name: razorwire-DSC-0080-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-rain.jpg
+- name: downtown-fredericksburg-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-atari-missle.JPG
+- name: legal-statue-legalstatue-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-rain.jpg
+- name: nazi-invasion-dinosaur-stepping-on-lego.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dinosaur-stepping-on-lego.jpg
+- name: mistywoods-babyfoot-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-spagetti-accident.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
+- name: nazi-invasion-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-los-angeles-downtown-from-afar.jpg
+- name: bluelake-gred-mash-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-38-67.jpg
+- name: mediterranean-mediterranean-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-light-dali.jpg
+- name: udnie-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7559.jpg
+- name: braceros-domingo-ulloa-creepy-doll-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-creepy-doll-looking-down.jpg
+- name: docks-docks-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smoking-cigarette.jpg
+- name: nazi-invasion-IMG_4753.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4753.jpg
+- name: server-cloud-server-racks-clouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-post-modern.jpg
+- name: server-cloud-server-racks-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-dali.jpg
 ---
 Residents Continue Flood Cleanup.&nbsp;DDT readers Share Their Christmas Traditions, Plans.&nbsp;Family Thankful For Support.&nbsp;Deerfield Beach Star Wide Receiver Bryce Gowdy Dies.&nbsp;Federal Courthouse In Baton Rouge.&nbsp;Judge Allows California's Shift To Energy Saving Light Bulbs.&nbsp;Josh Duhamel Gets New Contract To Promote North Dakota.&nbsp;DeKalb County Farm Bureau Honored.&nbsp;
